syntax = "proto3";

package gymu;

message UserRequest {
    int32 user_id = 1;
    repeated int32 ids = 2;
}

message IdsPackageMessage {
    repeated int32 ids = 1;
}

service BasketAnalyzeService {
    rpc RecommendExercises(UserRequest) returns (IdsPackageMessage) {}
    rpc RecommendWorkouts(UserRequest) returns (IdsPackageMessage) {}
}
